--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/diseno_btn"
             android:gravity="center"
+            android:onClick="InsercionHuevo"
             android:text="@string/btnAddHuevo" />
 
         <Button
